Remove markdown formatting from text in index.html

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     <main>
         <section id="home" class="hero-section">
             <div class="hero-content">
-                <h1>Ciao, sono **Raul Gabriel Cristea**</h1>
-                <p>Sono un Operatore Informatico **focalizzato sul Front-End**. Trasformo le idee grafiche in interfacce web funzionali e coinvolgenti.</p>
+                <h1>Ciao, sono Raul Gabriel Cristea</h1>
+                <p>Sono un Operatore Informatico focalizzato sul Front-End. Trasformo le idee grafiche in interfacce web funzionali e coinvolgenti.</p>
                 <div class="hero-actions">
                     <a href="#portfolio" class="button primary-btn">Vedi i Lavori</a>
                     <a href="CV_RaulCristea.pdf" class="button secondary-btn" download>Scarica il CV</a>
@@ -40,7 +40,7 @@
         <section id="about" class="content-section">
             <h2>Chi Sono</h2>
             <p>Sono Raul Gabriel Cristea, nato in Italia con origini rumene. Il mio percorso formativo è iniziato all'ITIS Castelli e si è concluso presso la Bottega Artigiani.</p>
-            <p>Il mio approccio è principalmente focalizzato sul **Front-End**, poiché la parte grafica e l'interazione diretta di un sito mi hanno sempre appassionato e incuriosito. Sono comunque in grado di abituarmi e affrontare rapidamente nuove sfide e tecnologie, garantendo flessibilità in ogni progetto.</p>
+            <p>Il mio approccio è principalmente focalizzato sul Front-End, poiché la parte grafica e l'interazione diretta di un sito mi hanno sempre appassionato e incuriosito. Sono comunque in grado di abituarmi e affrontare rapidamente nuove sfide e tecnologie, garantendo flessibilità in ogni progetto.</p>
             </section>
         
         <section id="experience" class="content-section light-bg">
@@ -49,14 +49,14 @@
                 
                 <div class="timeline-item">
                     <div class="timeline-date">Classe 3ª - 4ª</div>
-                    <h3>Stage Estivo</h3>
+                    <h3>Stage</h3>
                     <h4>Floow Agency</h4>
                     <p>Ho completato due mesi di stage estivo consecutivi, contribuendo a progetti web reali e consolidando le mie competenze sul campo in un ambiente di agenzia dinamico.</p>
                 </div>
 
                 <div class="timeline-item">
                     <div class="timeline-date">Classe 2ª</div>
-                    <h3>Stage Estivo</h3>
+                    <h3>Stage</h3>
                     <h4>ZAG Comunicazione SRL</h4>
                     <p>Esperienza di due mesi in agenzia, dove ho potuto applicare le prime nozioni di sviluppo informatico e comprendere il flusso di lavoro professionale.</p>
                 </div>
