Add project image to portfolio section
Added image for Macelleria Dotti Paolo project in portfolio.

--- a/index.html
+++ b/index.html
@@ -97,13 +97,12 @@
             </div>
         </section>
 
-        <section id="portfolio" class="content-section light-bg">
+       <section id="portfolio" class="content-section light-bg">
             <h2>Portfolio</h2>
             <div class="portfolio-grid">
                 <div class="project-card">
-                    <div class="project-placeholder">
-                        
-                    </div>
+                    <img src="preview_macelleria.jpg" alt="Anteprima sito Macelleria Dotti Paolo" class="project-image">
+                    
                     <h3>Sito Macelleria Dotti Paolo</h3>
                     <p>Realizzazione di un sito vetrina completo, inclusivo di un mini blog per la promozione dei prodotti e aggiornamenti.</p>
                     <div class="project-tags"><span>#SitoVetrina</span><span>#HTML</span><span>#CSS</span></div>
