Enhance HTML content with bold formatting

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/TUA_CHIAVE_FA.js" crossorigin="anonymous"></script> 
-    </head>
+</head>
 <body>
 
     <header class="navbar">
@@ -25,8 +25,8 @@
     <main>
         <section id="home" class="hero-section">
             <div class="hero-content">
-                <h1>Ciao, sono Raul Gabriel Cristea</h1>
-                <p>Sono un Operatore Informatico focalizzato sul Front-End. Trasformo le idee grafiche in interfacce web funzionali e coinvolgenti.</p>
+                <h1>Ciao, sono **Raul Gabriel Cristea**</h1>
+                <p>Sono un Operatore Informatico **focalizzato sul Front-End**. Trasformo le idee grafiche in interfacce web funzionali e coinvolgenti.</p>
                 <div class="hero-actions">
                     <a href="#portfolio" class="button primary-btn">Vedi i Lavori</a>
                     <a href="CV_RaulCristea.pdf" class="button secondary-btn" download>Scarica il CV</a>
@@ -40,8 +40,8 @@
         <section id="about" class="content-section">
             <h2>Chi Sono</h2>
             <p>Sono Raul Gabriel Cristea, nato in Italia con origini rumene. Il mio percorso formativo è iniziato all'ITIS Castelli e si è concluso presso la Bottega Artigiani.</p>
-            <p>Il mio approccio è principalmente focalizzato sul Front-End, poiché la parte grafica e l'interazione diretta di un sito mi hanno sempre appassionato e incuriosito. Sono comunque in grado di abituarmi e affrontare rapidamente nuove sfide e tecnologie, garantendo flessibilità in ogni progetto.</p>
-            </section>
+            <p>Il mio approccio è principalmente focalizzato sul **Front-End**, poiché la parte grafica e l'interazione diretta di un sito mi hanno sempre appassionato e incuriosito. Sono comunque in grado di abituarmi e affrontare rapidamente nuove sfide e tecnologie, garantendo flessibilità in ogni progetto.</p>
+        </section>
         
         <section id="experience" class="content-section light-bg">
             <h2>Esperienza Formativa e Lavorativa</h2>
@@ -49,14 +49,14 @@
                 
                 <div class="timeline-item">
                     <div class="timeline-date">Classe 3ª - 4ª</div>
-                    <h3>Stage</h3>
+                    <h3>Stage Estivo</h3>
                     <h4>Floow Agency</h4>
                     <p>Ho completato due mesi di stage estivo consecutivi, contribuendo a progetti web reali e consolidando le mie competenze sul campo in un ambiente di agenzia dinamico.</p>
                 </div>
 
                 <div class="timeline-item">
                     <div class="timeline-date">Classe 2ª</div>
-                    <h3>Stage</h3>
+                    <h3>Stage Estivo</h3>
                     <h4>ZAG Comunicazione SRL</h4>
                     <p>Esperienza di due mesi in agenzia, dove ho potuto applicare le prime nozioni di sviluppo informatico e comprendere il flusso di lavoro professionale.</p>
                 </div>
@@ -97,7 +97,7 @@
             </div>
         </section>
 
-       <section id="portfolio" class="content-section light-bg">
+        <section id="portfolio" class="content-section light-bg">
             <h2>Portfolio</h2>
             <div class="portfolio-grid">
                 <div class="project-card">
@@ -129,7 +129,7 @@
         <div class="social-links">
             <a href="https://www.instagram.com/raul.cristeaa/" target="_blank" aria-label="Instagram"><i class="fab fa-instagram fa-lg"></i></a>
             <a href="mailto:cristear117@gmail.com" aria-label="Email"><i class="fas fa-envelope fa-lg"></i></a>
-            </div>
+        </div>
     </footer>
 
     <script src="script.js"></script>
