--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     <main>
         <section id="home" class="hero-section">
             <div class="hero-content">
-                <h1>Ciao, sono **Raul Gabriel Cristea**</h1>
-                <p>Sono un Operatore Informatico **focalizzato sul Front-End**. Trasformo le idee grafiche in interfacce web funzionali e coinvolgenti.</p>
+                <h1>Ciao, sono Raul Gabriel Cristea</h1>
+                <p>Sono un Operatore Informatico focalizzato sul Front-End. Trasformo le idee grafiche in interfacce web funzionali e coinvolgenti.</p>
                 <div class="hero-actions">
                     <a href="#portfolio" class="button primary-btn">Vedi i Lavori</a>
                     <a href="CV_RaulCristea.pdf" class="button secondary-btn" download>Scarica il CV</a>
@@ -40,7 +40,7 @@
         <section id="about" class="content-section">
             <h2>Chi Sono</h2>
             <p>Sono Raul Gabriel Cristea, nato in Italia con origini rumene. Il mio percorso formativo è iniziato all'ITIS Castelli e si è concluso presso la Bottega Artigiani.</p>
-            <p>Il mio approccio è principalmente focalizzato sul **Front-End**, poiché la parte grafica e l'interazione diretta di un sito mi hanno sempre appassionato e incuriosito. Sono comunque in grado di abituarmi e affrontare rapidamente nuove sfide e tecnologie, garantendo flessibilità in ogni progetto.</p>
+            <p>Il mio approccio è principalmente focalizzato sul Front-End, poiché la parte grafica e l'interazione diretta di un sito mi hanno sempre appassionato e incuriosito. Sono comunque in grado di abituarmi e affrontare rapidamente nuove sfide e tecnologie, garantendo flessibilità in ogni progetto.</p>
         </section>
         
         <section id="experience" class="content-section light-bg">
@@ -88,7 +88,7 @@
                     <i class="fas fa-user-check"></i>
                     <h3>Soft Skills</h3>
                     <ul>
-                        <li>**Problem Solving** Efficace</li>
+                        <li>Problem Solving Efficace</li>
                         <li>Ottima Gestione del Tempo</li>
                         <li>Lavoro Autonomo e Remoto</li>
                         <li>Flessibilità e Adattabilità</li>
@@ -105,7 +105,7 @@
                     
                     <h3>Sito Macelleria Dotti Paolo</h3>
                     <p>Realizzazione di un sito vetrina completo, inclusivo di un mini blog per la promozione dei prodotti e aggiornamenti.</p>
-                    <div class="project-tags"><span>#SitoVetrina</span><span>#HTML</span><span>#CSS</span></div>
+                    <div class="project-tags"><span>#SitoVetrina</span><span>#Worldpress</span></div>
                     <a href="https://www.macelleriadottipaolo.com/" target="_blank" class="project-link">Vai al Sito &rarr;</a>
                 </div>
                 </div>
