Change 'Stage Estivo' to 'Stage' in timeline

--- a/index.html
+++ b/index.html
@@ -49,14 +49,14 @@
                 
                 <div class="timeline-item">
                     <div class="timeline-date">Classe 3ª - 4ª</div>
-                    <h3>Stage Estivo</h3>
+                    <h3>Stage</h3>
                     <h4>Floow Agency</h4>
                     <p>Ho completato due mesi di stage estivo consecutivi, contribuendo a progetti web reali e consolidando le mie competenze sul campo in un ambiente di agenzia dinamico.</p>
                 </div>
 
                 <div class="timeline-item">
                     <div class="timeline-date">Classe 2ª</div>
-                    <h3>Stage Estivo</h3>
+                    <h3>Stage</h3>
                     <h4>ZAG Comunicazione SRL</h4>
                     <p>Esperienza di due mesi in agenzia, dove ho potuto applicare le prime nozioni di sviluppo informatico e comprendere il flusso di lavoro professionale.</p>
                 </div>
